Fixed venture page alignment issue [deploy: production]

--- a/_sass/_ventures.scss
+++ b/_sass/_ventures.scss
@@ -74,3 +74,7 @@
         }
     }
 }
+
+.page-ventures{
+  text-align:center;
+}
